spade-tests/src/snapshots/spade_tests__ast_lowering__single_use_unknown_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
use X;
fn x(x: X) -> bool { false }


error: Use of undeclared name X
  ┌─ testinput:1:5
  │
1 │ use X;
  │     ^ Undeclared name
